Update controller